2020-03-06  Keith Marshall  <keith@users.osdn.me>

	Update GCC dependencies on LIBISL.DLL

	* mingw32/mingw32-gcc4.xml (gcc-core-bin): Explicitly identify all
	LIBISL.DLL version dependencies, specific to individual GCC releases.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-05  Keith Marshall  <keith@users.osdn.me>

	Update ISL package set to version 0.21

	* mingw32/mingw32-isl.xml (isl-dev): Add release reference; specify
	explicit LIBISL.DLL version dependencies for individual ISL releases.
	(isl-doc, isl-lic, libisl-dll): Add release references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-05  Keith Marshall  <keith@users.osdn.me>

	Update MPC package set to version 1.1.0

	* mingw32/mingw32-mpc.xml (mpc-dev): Add release reference; specify
	minimum version dependency on corresponding MPFR-4.0.2 release.
	(mpc-info, mpc-lic): Add release references.
	(libmpc-dll): Add release reference; specify explicit LIBMPFR.DLL
	dependencies for individual LIBMPC.DLL releases.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-05  Keith Marshall  <keith@users.osdn.me>

	Update MPFR package set to version 4.0.2

	* mingw32/mingw32-mpfr.xml (mpfr-dev): Add release reference; define
	release specific dependencies on explicit LIBMFPR.DLL versions.
	(mpfr-doc, mpfr-info, mpfr-lic, libmpfr-dll): Add release references.
	* common/issue.log mingw32/issue.log: Update accordingly.

2020-03-05  Keith Marshall  <keith@users.osdn.me>

	Publish MinGW.org GCC-9.2 and WSL-5.3 package sets.

	* mingw32/mingw32-gcc4.xml (gcc-lic, gcc-core-bin, gcc-info, gcc-man)
	(gcc-lang, libgcc-dll-1, gcc-ada-bin, libgnat-dll, gcc-c++-bin)
	(gcc-c++-man, libstdc++-dll-6, gcc-fortran-bin, gcc-fortran-info)
	(gcc-fortran-man, libgfortran-dll, gcc-objc-bin, libobjc-dll-4)
	(libatomic-dll-1, libgomp-dll-1, libssp-dll-1, libquadmath-dll-0)
	(libquadmath-info): Add release references for version 9.2.0-1.